#2 : Fix child creation on front.
