# back/docs/swagger.json
@@ -53,6 +53,41 @@
             }
         },
         "/user/child": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get all children linked to the current authenticated parent",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "children"
+                ],
+                "summary": "Get all children linked to the current authenticated parent",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.PublicUser"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -271,27 +306,43 @@
                 }
             }
         },
+        "models.PublicUser": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.UserLogin": {
             "type": "object",
             "required": [
-                "email",
-                "password"
+                "password",
+                "username"
             ],
             "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "john.doe@exmple.com"
-                },
                 "password": {
                     "type": "string",
                     "example": "password"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "jdoe"
                 }
             }
         },
         "models.UserRegister": {
             "type": "object",
             "required": [
-                "email",
                 "first_name",
                 "last_name",
                 "password",
@@ -300,8 +351,7 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string",
-                    "example": "john.doe@exmple.com"
+                    "type": "string"
                 },
                 "first_name": {
                     "type": "string",
