# back/models/User.go
@@ -5,7 +5,7 @@ type User struct {
 	Username  string `gorm:"unique" json:"username" binding:"required" example:"jdoe"`
 	LastName  string `json:"last_name" binding:"required" example:"Doe"`
 	FirstName string `json:"first_name" binding:"required" example:"John"`
-	Email     string `gorm:"unique" json:"email" binding:"required" example:"john.doe@exmple.com"`
+	Email     string `gorm:"unique;default:null" json:"email" binding:"required" example:"john.doe@example.com"`
 	Password  string `gorm:"not null" json:"password" binding:"required" example:"password"`
 	Role      string `json:"role" gorm:"not null" binding:"required" example:"user"`
 	ParentID  *uint  `gorm:"default:null"`        // If the user is a child, this will reference their parent's ID
@@ -17,7 +17,7 @@ type UserRegister struct {
 	Username  string `json:"username" binding:"required" example:"jdoe"`
 	LastName  string `json:"last_name" binding:"required" example:"Doe"`
 	FirstName string `json:"first_name" binding:"required" example:"John"`
-	Email     string `json:"email" binding:"required" example:"john.doe@exmple.com"`
+	Email     string `gorm:"unique;default:null" json:"email" example:"john.doe@example.com"`
 	Password  string `json:"password" binding:"required" example:"password"`
 	Role      string `json:"role" binding:"required" example:"parent"`
 }
@@ -48,4 +48,10 @@ type PublicUser struct {
 	FirstName string `json:"first_name"`
 	LastName  string `json:"last_name"`
 	Email     string `json:"email"`
+}
+
+type PublicChild struct {
+	Base
+	Username string `json:"username"`
+	Tokens   int    `json:"tokens"`
 }
